music handling and typo

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 			}
 			#hud {
 				position: absolute;
-				top: 0;
-				left: 0;
+				top: 8;
+				left: 8;
 			}
 		</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
@@ -31,6 +31,6 @@
 		<div id="canvas">
 			<div id="hud"></div>
 		</div>
-		<script src="index.ts"></script>
+		<script src="./index.ts"></script>
 	</body>
 </html>
